# pager-rs

./: .gitignore  Cargo.toml  README.md
src/: api.rs  lib.rs  main.rs
src/container_init/: mod.rs
src/page_manager/: container_init_repository_impl.rs  data_page_finder_impl.rs  data_page_insert_impl.rs  file_io.rs  file_rw.rs  free_page.rs  mod.rs  page_builder.rs  page_header.rs  page_io.rs  page_writer.rs  pages_pointer.rs  unit_file_io.rs
src/page_structure/: README.md  container_structure.fbs  generate.sh  header.fbs  scheme.fbs
src/structures/: data_struct.rs  data_structure.rs  event_log.rs  event_structure.rs  mod.rs  root_structure.rs  scheme_structure.rs
src/table_manager/: mod.rs  table_writer.rs
src/unit_scheme/: mod.rs  next_id.rs  unit_scheme.rs  unit_scheme_apply.rs
tests/: lib_test.rs
