[package]
name = "pager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_write_at = "0.1.0"
flexbuffers = "2.0.0"
lazy_static = "1.4.0"
ulid = "0.5.0"
serde = "1.0.137"
serde_derive = "1.0.137"
bincode = "2.0.0-rc.1"